[build-system]
requires = ["setuptools ~= 65.0.0", "cython ~= 0.29.0",
  "setuptools_scm[toml]>=7.1.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "nautobot-plugin-ssot-eip-solidserver"
# version = "0.0.5"
dynamic = ["version"]
authors = [
  { name="Mathias Wegner", email="mwegner@isc.upenn.edu" },
]
description = "Nautobot SSoT plugin for EIP Solidserver"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
# "Homepage" = ""
# "Bug Tracker" = ""

[tool.setuptools_scm]
write_to = "nautobot_ssot_eip_solidserver/_version.py"
