[tool.poetry]
name = "nautobot-plugin-ssot-eip-solidserver"
version = "1.0.0"
keywords = ["nautobot", "plugin", "solidserver"]
authors = ["Mathias Wegner <mwegner@isc.upenn.edu>"]
description = "Nautobot SSoT plugin for EIP Solidserver"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
packages = [{include = "nautobot_plugin_ssot_eip_solidserver"}]


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
validators = ">=0.22.0"
nautobot = ">=1.6,<2.0"
nautobot_ssot = ">=1.6.0,<2.0"
types-requests = "<=2.31.0.7"

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"
pytest-mock = "*"

[tool.poetry.group.dev.dependencies]
pylint = ">=2.15.9"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-dynamic-versioning.substitution]
files = ["nautobot_ssot_eip_solidserver1/__init__.py", "pyproject.toml", "*.py"]
